# try_again

./: .gitignore  Pipfile  README.md  data.dvc  pyproject.toml  requirements.txt  tasks.py
.dvc/: config
.github/workflows/: tests.yaml
M6/src/mnist/: data.py  evaluate.py
M6/tests/: test_data.py
docs/: mkdocs.yaml
models/: model.pth
src/mnist/: __init__.py  data.py  train.py
tests/: __init__.py  test_data.py  test_model.py  test_training.py
